Bug 1127235 - refactor stream clock calculation in MediaDecoderStateMachine. r=roc.